[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/game/RedCrosshair.png" type="Texture" id=1]
[ext_resource path="res://script/game/Gameplay/Fire.gd" type="Script" id=2]
[ext_resource path="res://script/game/Gameplay/Crosshair.gd" type="Script" id=3]
[ext_resource path="res://assets/game/board_blue.png" type="Texture" id=4]

[node name="Fire" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="board_blue" type="Sprite" parent="."]
position = Vector2( 18, 18 )
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Crosshair" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Fire" type="Button" parent="."]
margin_left = 443.545
margin_top = 264.473
margin_right = 528.545
margin_bottom = 318.473
text = "FIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireDialog" type="AcceptDialog" parent="."]
pause_mode = 2
margin_right = 83.0
margin_bottom = 58.0
dialog_text = "You must select a valid position"

[connection signal="pressed" from="Fire" to="." method="_on_Fire_pressed"]
[connection signal="confirmed" from="FireDialog" to="." method="_on_FireDialog_confirmed"]
